--- a/app/assets/stylesheets/active_admin.css
+++ b/app/assets/stylesheets/active_admin.css
@@ -1,3 +1,226 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  /* Fonts */
+  --Body-Text-Small: Inter;
+  /* font sizes */
+  --Body-Text-Small-size: 14px;
+  /* Figma Variables */
+  /* Color Variables */
+  --Grises-Blanco: #fff;
+  --Grises-Gris-02: #2c2c2c;
+  --Grises-Gris-03: #878787;
+  --Grises-Gris-04: #c6c6c6;
+  --Grises-Gris-06: #f5f5f5;
+
+}
+
+h3 {
+  font-size: var(--body-text-general-strong-size);
+  line-height: 22px;
+  font-weight: 600;
+  font-family: var(--body-text-general-strong);
+  color: #000;
+}
+
+input {
+  border-radius: 4px;
+  border: 1px solid var(--Grises-Gris-04);
+  padding: 10px 16px;
+}
+
+.section-header {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+  margin-top: 20px;
+}
+form > fildset {
+  margin-bottom: 20px;
+}
+.has-many-add,
+.has-many-remove {
+  cursor: pointer;
+  border-radius: .5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235/var(--tw-bg-opacity,1));
+  padding: .5rem 1rem;
+  text-align: center;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255/var(--tw-text-opacity,1));
+  text-decoration: none;
+  width: fit-content;
+}
+.has-many-add {
+  float: right;
+}
+.has-many-fields ol {
+  display: flex;
+  gap: 30px;
+}
+/*#question_semaphore_attributes_green_text_input::after {
+  content: " > ";
+  width: 20px;
+  height: 20px;
+  display: block;
+  position: relative;
+}*/
+.main-options {
+  width: 100%;
+}
+.main-options .inputs > ol > li {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 20% 80%;
+}
+#options-section > ol > li {
+  width: 100%;
+}
+#options-section ol {
+  align-items: center;
+  justify-content: space-between;
+}
+#options-section .has-many-fields > ol > li:first-child {
+  width: 90%;
+}
+#options-section .has-many-fields > ol > li.input > .inputs {
+  display: inline-flex;
+  width: 100%;
+}
+#options-section .has-many-fields > ol > li.input > .inputs > legend {
+  float: left;
+  width: 21%;
+  margin: auto 0;
+}
+
+#options-section .has-many-fields > ol > li.input > .inputs li {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+/* SEMAPHORE SECTION */
+#semaphore-section > ol {
+  display: grid;
+  grid-template-columns: 7fr 3fr;
+  gap: 20px;
+}
+#semaphore-section > ol li {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+#semaphore-section > ol:first-child li label {
+  width: 39%;
+}
+#question_semaphore_attributes_yellow_text_input {
+  grid-column: 1/3;
+  width: 69%;
+}
+
+
+/* POLL */
+.new_poll_question {
+  display: none;
+  &.active {
+    display: flex;
+  }
+}
+.section-questions {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.question-top {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0;
+}
+.question-top .condition {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.question-top .condition input {
+  width: 50px;
+}
+.question-bottom {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin: 10px 0;
+}
+.boxed {
+  line-height: 16px;
+  font-weight: 500;
+  align-self: stretch;
+  border-radius: 4px;
+  background-color: var(--Grises-Gris-06);
+  border: 1px solid var(--Grises-Gris-04);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 10px 16px;
+}
+.dinamic-question {
+  display: none;
+  position: absolute;
+  background: #FFF;
+  width: 100%;
+  box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.25);
+  padding: 20px;
+  max-width: 1024px;
+  right: 0;
+  &.active {
+    display: block;
+  }
+  > div {
+    display: flex;
+    border-bottom: 1px solid #000;
+    &.option-header {
+      font-weight: 600;
+    }
+    > div {
+      width: 50%;
+      :first {
+        border-right: 1px solid #000;
+      }
+    }
+  }
+}
+.dinamic-question.active .semaphore-wrapper,
+.semaphore-wrapper {
+  display: grid;
+  grid-template-columns: 25% 50% calc(10% - 30px) 15%;
+  border: none;
+  gap: 10px;
+  align-items: center;
+}
+.formula {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  gap: 15px;
+  label {
+    width: 25%;
+  }
+  input {
+    width: 75%;
+  }
+}
+.operator {
+  text-align: center;
+}
+.section-semaphore {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
