--- a/app/assets/stylesheets/active_admin.css
+++ b/app/assets/stylesheets/active_admin.css
@@ -16,6 +16,9 @@
   --Grises-Gris-06: #f5f5f5;
 
 }
+.formtastic :where(.buttons, .actions) {
+  margin-top: 0;
+}
 
 h3 {
   font-size: var(--body-text-general-strong-size);
@@ -29,6 +32,10 @@ input {
   border-radius: 4px;
   border: 1px solid var(--Grises-Gris-04);
   padding: 10px 16px;
+}
+
+fieldset, legend {
+  margin-bottom: 12px;
 }
 
 .section-header {
@@ -80,6 +87,8 @@ form > fildset {
 }
 #options-section > ol > li {
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 #options-section ol {
   align-items: center;
@@ -117,7 +126,8 @@ form > fildset {
 #semaphore-section > ol:first-child li label {
   width: 39%;
 }
-#question_semaphore_attributes_yellow_text_input {
+#question_semaphore_attributes_yellow_text_input,
+.label-yellow {
   grid-column: 1/3;
   width: 69%;
 }
