--- a/app/views/question/_semaphore.html.erb
+++ b/app/views/question/_semaphore.html.erb
@@ -4,7 +4,7 @@
   <div class="operator">></div>
   <div class="value"><%= semaphore.green_value %></div>
   <label>Semáforo amarillo</label>
-  <div class="label"><%= semaphore.yellow_text %></div>
+  <div class="label label-yellow"><%= semaphore.yellow_text %></div>
   <div class="label"><%= semaphore.red_text %></div>
   <div class="operator"><</div>
   <div class="label"><%= semaphore.red_value %></div>
