Se agregan correciones al admin y se comienza front

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,8 @@
-<h1>Gemma - Economía circular para empresas</h1>
+<div class="home">
+  <div class="header">
+    <h1>Gemma - Economía circular para empresas</h1>
+    <button class="main-action">Iniciá el autodiagnóstico de tu empresa</button>
+  </div>
 <p>
   Esta es la página de inicio
 </p>
