Se agrega diseño de front y companies

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,14 @@
   </head>
 
   <body>
+    <header>
+      <%= render partial: '/layouts/header' %>
+    </header>
+    <p class="notice"><%= notice %></p> 
+    <p class="alert"><%= alert %></p> 
     <%= yield %>
+    <footer>
+      <%= render partial: '/layouts/footer' %>
+    </footer>
   </body>
 </html>
