--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,58 @@
 <div class="home">
-  <div class="header">
+  <div class="header rectangle-div">
     <h1>Gemma - Economía circular para empresas</h1>
-    <button class="main-action">Iniciá el autodiagnóstico de tu empresa</button>
+    <%= link_to "Iniciá el autodiagnóstico de tu empresa", new_company_registration_path(), class: "main-action" %>
   </div>
-<p>
-  Esta es la página de inicio
-</p>
-<h2>Secciones</h2>
-<% Section.all.each do |section| %>
-<div><%= section.title %></div>
-<% end %>
+  <div id="content">
+    <div class="section">
+      <div class="image-box image-box-right">
+        <div class="image-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
+
+          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna.
+
+          Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.
+        </div>
+        <div class="image-box-image"><div class="rectangle-div"></div></div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="image-box image-box-left">
+        <div class="image-box-image"><div class="rectangle-div"></div></div>
+        <div class="image-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
+
+          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna.
+
+          Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.
+        </div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="image-box image-box-right">
+        <div class="image-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
+
+          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna.
+
+          Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.
+        </div>
+        <div class="image-box-image"><div class="rectangle-div"></div></div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="image-box image-box-left">
+        <div class="image-box-image"><div class="rectangle-div"></div></div>
+        <div class="image-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
+
+          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna.
+
+          Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.
+        </div>
+      </div>
+    </div>
+    <div class="section">
+      <h2>Empresas Aliadas</h2>
+      <div class="logo-slider">
+        
+      </div>
+    </div>
+  </div>
+</div> 
