--- a/app/assets/stylesheets/front.css
+++ b/app/assets/stylesheets/front.css
@@ -1,6 +1,18 @@
 :root {
   /* Fonts */
   --font-work-sans: 'Work Sans';
+  --font-inter: Inter;
+  --font-font-awesome-6-pro: 'Font Awesome 6 Pro';
+  /* font sizes */
+  --font-size-base: 16px;
+  --font-size-xs: 12px;
+  /* Color Variables */
+  --Gris-Fusin: #9da9a3;
+  --Grises-Gris-01: #1f1f1f;
+  --Grises-Gris-03: #878787;
+  --Grises-Gris-04: #c6c6c6;
+  --Grises-Blanco: #fff;
+  --Mostaza-Energizante: #dca410;
 }
 
 h1 {
@@ -12,4 +24,146 @@ h1 {
     color: #000;
     text-align: left;
     display: inline-block;
+    padding: 50px 0;
+}
+h2 {
+  font-size: 24px;
+  line-height: 28px;
+  font-family: var(--font-work-sans);
+  color: #000;
+  text-align: center;
+}
+.section {
+  margin: 50px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.rectangle-div {
+  width: 100%;
+  background-color: #d9d9d9;
+  height: 249px;
+}
+.main-action {
+  border-radius: 4px;
+  background-color: var(--Mostaza-Energizante);
+  width: fit-content;
+  height: 44px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+  box-sizing: border-box;
+  text-align: left;
+  font-size: 16px;
+  color: var(--Grises-Blanco);
+  font-family: var(--font-inter);
+  text-decoration: none;
+}
+.image-box {
+  display: flex;
+  gap: 100px;
+}
+.image-box-image {
+  min-width: 250px;
+}
+/**** HEADER  *****/
+header a {
+  font-size: 12px;
+  letter-spacing: 2px;
+  line-height: 14px;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-family: var(--font-inter);
+  color: #000;
+  text-align: left;
+  text-decoration: none;
+}
+.header-inner {
+  padding: 20px 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav ul {
+  display: flex;
+  gap: 55px;
+}
+/*FOOTER*/
+footer {
+  padding: 50px 15%;
+  width: 100%;
+  position: relative;
+  background-color: var(--Gris-Fusin);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  box-sizing: border-box;
+  gap: 50px;
+  text-align: left;
+  font-size: var(--font-size-xs);
+  color: var(--color-white);
+  font-family: var(--font-inter);
+}
+footer a {
+  font-size: 12px;
+  letter-spacing: 2px;
+  line-height: 14px;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-family: var(--font-inter);
+  color: #fff;
+  text-align: left;
+  text-decoration: none;
+}
+footer .footer-inner {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+footer .footer-column {
+  display: flex;
+  gap: 50px;
+}
+footer .footer-left > div ul {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+/*CONTENT*/
+#content {
+  padding: 50px 15%;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+input {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  text-align: left;
+  font-size: var(--font-size-base);
+  color: var(--Grises-Gris-03);
+  font-family: var(--font-font-awesome-6-pro);
+}
+
+/****** FRONT ******/
+.home .header {
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.logo-slider{
+  min-height: 150px;
+  background: #c6c6c6;
+  width: 100%;
 }
