Se generan páginas principales de usuarios, se replantea el menú y otres

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="home">
   <div class="header rectangle-div">
     <h1>Gemma - Economía circular para empresas</h1>
-    <%= link_to "Iniciá el autodiagnóstico de tu empresa", new_company_registration_path(), class: "main-action" %>
+    <%= link_to "Iniciá el autodiagnóstico de tu empresa", new_company_registration_path(), class: "main-button" %>
   </div>
   <div id="content">
     <div class="section">
