--- a/app/assets/stylesheets/front.css
+++ b/app/assets/stylesheets/front.css
@@ -33,6 +33,15 @@ h2 {
   color: #000;
   text-align: center;
 }
+a {
+  font-size: 12px;
+  text-decoration: underline;
+  line-height: 14px;
+  font-weight: 600;
+  font-family: var(--font-inter);
+  color: var(--Grises-Gris-03);
+  text-align: left;
+}
 .section {
   margin: 50px 0;
   display: flex;
@@ -44,7 +53,11 @@ h2 {
   background-color: #d9d9d9;
   height: 249px;
 }
-.main-action {
+.actions {
+  display: flex;
+  gap: 20px;
+}
+.main-button {
   border-radius: 4px;
   background-color: var(--Mostaza-Energizante);
   width: fit-content;
@@ -53,14 +66,34 @@ h2 {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  padding: 16px;
+  padding: 12px 16px;
   box-sizing: border-box;
   text-align: left;
   font-size: 16px;
   color: var(--Grises-Blanco);
   font-family: var(--font-inter);
   text-decoration: none;
+  line-height: 16px;
 }
+.secondary-button {
+  border-radius: 4px;
+  background-color: var(--Grises-Blanco);
+  border: 2px solid var(--Mostaza-Energizante);
+  box-sizing: border-box;
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 16px;
+  text-align: left;
+  font-size: 12px;
+  color: var(--Mostaza-Energizante);
+  font-family: var(--font-inter);
+  line-height: 16px;
+  text-decoration: none;
+}
+
 .image-box {
   display: flex;
   gap: 100px;
