--- a/app/views/companies/registrations/new.html.erb
+++ b/app/views/companies/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div id="content">
-  <h1>Sign up</h1>
+  <h1>Registro</h1>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "companies/shared/error_messages", resource: resource %>
@@ -61,7 +61,7 @@
     
 
     <div class="actions">
-      <%= f.submit "Sign up" %>
+      <%= f.submit "Sign up", class: "main-button" %>
     </div>
   <% end %>
 
