--- a/app/views/static_pages/pricing.html.erb
+++ b/app/views/static_pages/pricing.html.erb
@@ -1,32 +1,42 @@
 <div id="content">
   <h1>Planes</h1>
-  <div class="section">
-    <div class="image-box image-box-right">
-      <div class="image-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
-
-        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna.
-
-        Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.
-      </div>
+  <div class="section pricing">
+    <div class="image-box">
       <div class="image-box-image"><div class="rectangle-div"></div></div>
+      <div class="image-box-text">
+        <h2>Beneficios para las PYMES:</h2>
+        <ul>
+          <li>• Generación de información clave sobre la operativa de la empresa.</li>
+          <li>• Identificación de los principales aspectos ambientales a gestionar.</li>
+          <li>• Identificación de oportunidades para la reducción de costos al optimizar el uso de recursos y minimizar desperdicios.</li>
+          <li>• Detección de mejoras en los procesos que pueden generar una mayor eficiencia operativa.</li>
+          <li>• Acceso a nuevas oportunidades de negocio, alineándose con clientes que buscan proveedores más sostenibles.</li>
+          <li>• Posibilidad de explorar nuevas líneas de productos y modelos de negocio circulares.</li>
+        </ul>
+      </div>
+      <%= link_to "Comenzar ahora", new_company_registration_path(), class: "main-button" %>
     </div>
-    <div class="image-box image-box-left">
+    <div class="image-box">
       <div class="image-box-image"><div class="rectangle-div"></div></div>
-      <div class="image-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
-
-        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna.
-
-        Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.
+      <div class="image-box-text">
+        <h2>Beneficios para las Empresas Tractoras</h3>
+        <ul>
+          <li>• Mayor sostenibilidad en su cadena de suministro, reduciendo riesgos ambientales y económicos.</li>
+          <li>• Mejora en la trazabilidad de insumos y materias primas.</li>
+          <li>• Cumplimiento de estándares y normativas ambientales, facilitando certificaciones y requisitos de mercado.</li>
+          <li>• Refuerzo de su reputación en mercados que valoran la sostenibilidad.</li>
       </div>
+      <%= link_to "Comenzar ahora", new_company_registration_path(), class: "main-button" %>
     </div>
-    <div class="image-box image-box-right">
+    <div class="image-box">
+      <div class="image-box-image"><div class="rectangle-div"></div></div>
       <div class="image-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
 
         Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna.
 
         Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.
       </div>
-      <div class="image-box-image"><div class="rectangle-div"></div></div>
+      <%= link_to "Comenzar ahora", new_company_registration_path(), class: "main-button" %>
     </div>
   </div>
   <div class="section">
