--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,12 @@
 <div class="header-inner">
-  <img src=/images/Group.svg />
+  <%= link_to image_tag("/images/Group.svg"), root_path() %>
   <nav>
     <ul>
-      <li><%= link_to "Planes", planes_path() %>
-      <li><%= link_to "Sobre el proyecto", sobre_el_proyecto_path() %>
+      <li><%= link_to "Planes", planes_path() %></li>
+      <li><%= link_to "Sobre el proyecto", sobre_el_proyecto_path() %></li>
       <% if company_signed_in? %>
         <li><%= link_to 'Tablero', dashboard_path, :class => 'navbar-link' %> </li>
-        <li><%= link_to "Cerrar sesión", destroy_company_session_path, method: :delete, :class => 'navbar-link'  %></li>
+        <li><%= button_to "Cerrar sesión", destroy_company_session_path, method: :delete, :class => 'navbar-link'  %></li>
       <% else %>
         <li><%= link_to "Acceso a clientes",  company_session_path() %>
       <% end %>
