--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,11 +6,9 @@
   <div id="content">
     <div class="section">
       <div class="image-box image-box-right">
-        <div class="image-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
-
-          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna.
-
-          Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.
+        <div class="image-box-text">
+          <p>Bienvenidos a la herramienta digital de gestión y autodiagnóstico de circularidad de Pymes, que permite integrar y profesionalizar buenas prácticas sostenibles.</p>
+          <p>A través de esta plataforma, facilitamos un recurso para que las empresas grandes impulsen a las pymes de su cadena de valor a mejorar sus modelos de negocios desde la perspectiva de la circularidad.</p>
         </div>
         <div class="image-box-image"><div class="rectangle-div"></div></div>
       </div>
@@ -18,21 +16,17 @@
     <div class="section">
       <div class="image-box image-box-left">
         <div class="image-box-image"><div class="rectangle-div"></div></div>
-        <div class="image-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
-
-          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna.
-
-          Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.
+        <div class="image-box-text">
+          <p>Las PYMEs en Uruguay enfrentan el desafío de adaptarse a nuevos marcos regulatorios sobre información de sostenibilidad, empresas grandes que van avanzando hacia la exigencia de incorporación de buenas prácticas, y un mercado global cada vez más exigente en temas de sostenibilidad.</p>
+          <p>Las grandes empresas, se ven cada vez más exigidas a trabajar con su cadena de valor y ampliar su perspectiva de impacto, impulsando mejoras, y tomando la corresponsabilidad de esta transformación.</p>
+          <p>Las empresas uruguayas que no transformen su modelo de negocio hacia uno más sostenible corren el riesgo de perder competitividad y oportunidades de crecimiento.</p>
         </div>
       </div>
     </div>
     <div class="section">
       <div class="image-box image-box-right">
-        <div class="image-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
-
-          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna.
-
-          Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.
+        <div class="image-box-text">
+          <p>La Plataforma busca nutrir esfuerzos ya implementados en el país (Ej. Estrategia Nacional de Economía Circular) facilitando una herramienta de gestión que permita integrar y profesionalizar las buenas prácticas en las pymes uruguayas, generando informes con identificación de mejoras, para profesionalizar la gestión estratégica, y potenciar la competitividad, afianzando los vínculos comerciales con actuales clientes, y potenciando oportunidades en mercados globales.</p>
         </div>
         <div class="image-box-image"><div class="rectangle-div"></div></div>
       </div>
@@ -40,11 +34,8 @@
     <div class="section">
       <div class="image-box image-box-left">
         <div class="image-box-image"><div class="rectangle-div"></div></div>
-        <div class="image-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
-
-          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna.
-
-          Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.
+          <div class="image-box-text">
+            <p>Con el apoyo de ANDE, el equipo de Gemma trabajó en el desarrollo de una herramienta digital accesible y fácil de usar para que las PYMEs uruguayas diagnostiquen y gestionen sus prácticas de sostenibilidad con foco en economía circular brindando herramientas de análisis para que la empresa pueda tomar decisiones informadas basadas en datos reales.</p>
         </div>
       </div>
     </div>
