Primera versión con evaluaciones funcional.

--- a/app/assets/stylesheets/front.css
+++ b/app/assets/stylesheets/front.css
@@ -16,7 +16,9 @@
   --Mostaza-Energizante: #dca410;
   --Feedback-Warning-Dark: #e0982b;
   --Feedback-Warning-Light: #fffbed;
-
+  --color-green: #3eb076;
+  --color-red: #f63b3b;
+  --color-yellow: #f7ec5b;
 }
 
 h1 {
