--- a/app/views/companies/dashboard.html.erb
+++ b/app/views/companies/dashboard.html.erb
@@ -1,22 +1,6 @@
 <div id="content">
   <div id="company-dashboard">
-    <div id="company-data">
-      <% if @company.logo.attached? %>
-        <%= image_tag @company.logo %>
-      <% else %>
-        <div class="rectangle-div"></div>
-      <% end %>
-      <div id="company-info" class="section">
-        <h1><%= @company.fake_name %></h1>
-        <h4>última puntuación</h4>
-        <span class="result">TODO</span>
-        <span>RUT: <%= @company.registration_number %></span>
-        <span>Persona de contacto: <%= @company.contact_name %></span>
-        <span>Teléfono: <%= @company.contact_tel %></span>
-        <span>Dirección: <%= @company.address %></span>
-        <%= link_to 'Editar datos de la empresa', edit_company_registration_path, class: 'main-button' %>
-      </div>
-    </div>
+    <%= render partial: 'company_data' %>
     <div id="main-companies" class="section">
       <% if @company.is_main_company %>
 
@@ -44,6 +28,22 @@
     <div id="main-companies" class="section">
       <h2>Evaluaciones completadas</h2>
       <div id="company-evaluations">
+        <% @company.evaluations.each do |evaluation| %>
+          <div class="evaluation">
+            <h3><%= evaluation.poll.title %></h3>
+            <div class="filters">
+              <div class="tag"><%= evaluation.poll.area.title %></div>
+              <div class="tag"><%= evaluation.poll.provision.title %></div>
+            </div>
+            <% if evaluation.is_submitted %>
+              <div class="evaluation-date"><%= evaluation.submitted_date %></div>
+              <%= link_to "Ver evaluación", evaluation_path(evaluation), class: "main-button" %>
+              <%= link_to "Descargar certificado", '/', class: "secondary-button" %>
+            <% else %>
+              <%= link_to "Contniuar editando", edit_evaluation_path(evaluation), class: "main-button" %>
+            <% end %>
+          </div>
+        <% end %>
       </div>
     </div>
     <div class="image-box image-box-left">
